# cuda-order-book

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/throughput/: main_bench.cu
cmake/modules/: FindCUDA.cmake
include/core/: types.cuh
include/lob/: config.hpp  types.cuh
include/lob/device/: primitives.cuh  reduce.cuh  scan.cuh
include/lob/utils/: cuda_check.cuh  timer.hpp
python/analysis/: plot_latency.py  replay_pcap.py
scripts/: generate_market_data.py
src/core/: matching_engine.cpp  order_book.cpp
src/device/kernels/: match_kernel.cu  reduce_kernel.cu  sort_kernel.cu
src/host/: engine.cpp  feed_handler.cpp
src/kernels/: matching_engine.cu
tests/unit/: test_matching.cu  test_orders.cpp
